[package]
name = "web-sys-closure"
version = "0.1.0"
authors = ["Jimmy Moon <ragingwind@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.47"
js-sys = "0.3.24"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'Window',
]

