[package]
name = "web-sys-performance-now"
version = "0.1.0"
authors = ["Jimmy Moon <ragingwind@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.46"
humantime = "1"

[dependencies.web-sys]
version = "0.3.4"
features = ['Window', 'Performance', 'PerformanceTiming']